Add date/time select activity.

--- a/AntiOverSpeed/AndroidManifest.xml
+++ b/AntiOverSpeed/AndroidManifest.xml
@@ -24,6 +24,8 @@
 		</activity>
         <activity android:name=".PositionsList">
 		</activity>
+        <activity android:name=".TimeSelect">
+		</activity>
     </application>
 
 </manifest>
