--- a/AntiOverSpeed/AndroidManifest.xml
+++ b/AntiOverSpeed/AndroidManifest.xml
@@ -7,9 +7,9 @@
         android:minSdkVersion="8"
         />
 
-    <uses-permission android:name = "android.permission.DISABLE_KEYGUARD"/><!-- 屏蔽HOME键需要的权限 -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>   
  	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+ 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     
     <application
         android:allowBackup="true"
