--- a/SpeedRecorder/AndroidManifest.xml
+++ b/SpeedRecorder/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="cn.lpap.antioverspeed"
+    package="cn.lpap.speedrecorder"
     android:versionCode="3"
     android:versionName="1.0" >
 
@@ -16,17 +16,17 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity android:name="cn.lpap.speedrecorder.MainActivity" android:label="@string/app_name">
+        <activity android:name=".MainActivity" android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" /> 
 			<category android:name="android.intent.category.LAUNCHER" /> 
 			 </intent-filter>
 		</activity>
-        <activity android:name="cn.lpap.speedrecorder.AppInfo">
+        <activity android:name=".AppInfo">
 		</activity>
-        <activity android:name="cn.lpap.speedrecorder.PositionsList">
+        <activity android:name=".PositionsList">
 		</activity>
-        <activity android:name="cn.lpap.speedrecorder.TimeSelect">
+        <activity android:name=".TimeSelect">
 		</activity>
     </application>
 
