--- a/SpeedRecorder/AndroidManifest.xml
+++ b/SpeedRecorder/AndroidManifest.xml
@@ -28,6 +28,12 @@
 		</activity>
         <activity android:name=".TimeSelect">
 		</activity>
+		<receiver android:name=".BootCompletedReceiver">  
+		    <intent-filter>    
+		        <action android:name="android.intent.action.BOOT_COMPLETED" />    
+		    </intent-filter>  
+		</receiver>
+		<service android:name=".GpsService"></service>
     </application>
 
 </manifest>
