--- a/SpeedRecorder/AndroidManifest.xml
+++ b/SpeedRecorder/AndroidManifest.xml
@@ -12,6 +12,8 @@
  	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
  	<uses-permission android:name="android.permission.WAKE_LOCK"/>
  	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+ 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/> 
+ 	<uses-permission android:name="android.permission.RESTART_PACKAGES"/> 
     
     <application
         android:allowBackup="true"
@@ -34,6 +36,9 @@
 		    <intent-filter>    
 		        <action android:name="android.intent.action.BOOT_COMPLETED" />    
 		    </intent-filter>  
+		    <intent-filter>    
+		        <action android:name="com.lpap.speedrecorder.startService" />    
+		    </intent-filter> 
 		</receiver>
 		<service android:name=".GpsService"></service>
     </application>
